# TRQP-TSPP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.json  QUICKSTART.md  README.md  SECURITY.md  _config.yml  al-contract.json  trqp-adversarial-matrix.md
.github/: dependabot.yml
controls/: control-registry.json
docs/: GRID_NOTES.md  OUTPUT_CONTRACT.md  PLAYBOOK.md  ctr-acb-alignment.md  deployment-guidance.md  evidence_bundles.md  hub-crosswalk.md  index.md  operational-stack.md  profile.md  requirements.md  roadmap.md  standards-alignment.md  threat-model.md  traceability-matrix.md
examples/: bridge_golden_fixtures.json  queries.json
harness/: CONFIG.md  README.md  README.txt  ci-requirements.txt  pyproject.toml  requirements.txt
harness/fixtures/: queries.json
harness/schemas/: tspp-bridge-fixtures.schema.json  tspp-conformance-report.schema.json  tspp-trqp-metadata.schema.json  tspp-trqp-signed-response.schema.json
harness/tests/: conftest.py  test_01_metadata.py  test_02_freshness.py  test_03_context_allowlist.py  test_04_uniform_errors.py  test_05_ratelimits.py  test_06_al2_signed_responses.py  test_07_bridge_equivalence.py  test_08_al3_controls.py  test_09_al4_controls.py  test_10_recognition_security.py  test_11_sci_controls.py  test_validate_unit.py
harness/tspp_trqp_harness/: __init__.py  cli.py  client.py  reporting.py  validate.py
harness/tspp_trqp_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openapi/: tspp-trqp-openapi.yaml
releases/: v0.10.0.md  v0.10.1.md  v0.2.1.md  (+11 more)
(+29 files in other folders)
