[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tspp-trqp-harness"
version = "0.1.0"
description = "Conformance harness for TRQP Security & Privacy Profile (TSPP) v0.1"
requires-python = ">=3.9"
dependencies = ["requests==2.31.0", "pytest==7.4.0", "jsonschema==4.21.0", "python-dateutil==2.9.0", "jwcrypto==1.5.6"]

[project.scripts]
tspp-harness = "tspp_trqp_harness.cli:main"
